<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abs">Audiobook Shelf</string>
    <string name="add_new_server">Add New Server</string>
    <string name="abs_server_github_link">audiobookshelf server GitHub</string>
    <string name="abs_app_github_link">Audiobook Shelf app GitHub</string>
    <string name="server_address">Server Address</string>
    <string name="url_example">55.55.55.55:13378</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="server_icon">server_icon</string>
    <string name="server_connection_error">Failed to connect to server. Please verify the address is correct and try again.</string>
    <string name="duplicate_server_error">Server already exists. Please add a different server to the list, or you can add additional users to an existing server.</string>
    <string name="failed_to_insert_error">Failed to add new server. Please try again.</string>
    <string name="login">Login</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_failed_error">Failed to login. Please check your username and password and try again.</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="series">Series</string>
    <string name="collections">Collections</string>
    <string name="authors">Authors</string>
</resources>