<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="githubModel"
            type="com.kymahi.audiobookshelf.android.setup.viewmodels.GitHubViewModel" />

        <variable
            name="loginModel"
            type="com.kymahi.audiobookshelf.android.setup.login.viewmodels.LoginModel" />

        <variable
            name="url"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="8dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/abs_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/abs_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/abs"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abs_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/round_corner_primary_background"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{url}"
                android:textColor="@android:color/white"
                tools:text="audiobooks.example.com" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:autofillHints="username"
                android:background="@drawable/round_corner_secondary_background_light_border"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:nextFocusRight="@id/password_input"
                android:nextFocusDown="@id/password_input"
                android:nextFocusForward="@id/password_input"
                android:padding="8dp"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/round_corner_secondary_background_light_border"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusLeft="@id/username_input"
                android:nextFocusUp="@id/username_input"
                android:padding="8dp"
                android:textColorHint="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{loginModel.loginErrorMessageLiveData}"
                android:textColor="@android:color/holo_red_light"
                android:visibility="@{loginModel.loginErrorVisibilityLiveData}"
                tools:text="@string/server_connection_error" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_corner_secondary_background_light_border"
                android:onClick="@{() -> loginModel.login()}"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/abs_server_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableEnd="@drawable/github_icon_small"
            android:drawablePadding="8dp"
            android:onClick="@{() -> githubModel.onServerLinkClick()}"
            android:text="@string/abs_server_github_link"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/abs_app_github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/abs_app_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableEnd="@drawable/github_icon_small"
            android:drawablePadding="8dp"
            android:onClick="@{() -> githubModel.onAppLinkClick()}"
            android:text="@string/abs_app_github_link"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>