<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="githubModel"
            type="com.kymahi.audiobookshelf.android.addserver.viewmodels.GitHubViewModel" />
        <variable
            name="addServerModel"
            type="com.kymahi.audiobookshelf.android.addserver.viewmodels.AddServerModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/abs_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/abs_icon"
            android:onClick="@{() -> addServerModel.onDoubleClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/abs"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abs_logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintWidth_max="360dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/server_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="400dp"
                app:serverList="@{addServerModel.serverLiveData}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/add_server_button"
                tools:listitem="@layout/server_list_item"
                tools:itemCount="6" />

            <Button
                android:id="@+id/add_server_button"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corner_secondary_background_light_border"
                android:text="@string/add_new_server"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="@{() -> addServerModel.showServerModal()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/server_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/abs_server_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableEnd="@drawable/github_icon_small"
            android:drawablePadding="8dp"
            android:onClick="@{() -> githubModel.onServerLinkClick()}"
            android:text="@string/abs_server_github_link"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/abs_app_github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/abs_app_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableEnd="@drawable/github_icon_small"
            android:drawablePadding="8dp"
            android:onClick="@{() -> githubModel.onAppLinkClick()}"
            android:text="@string/abs_app_github_link"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompatTextViewDrawableXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>